@@ -34,7 +34,7 @@ int startup()
 	pthread_t tid;
 	int ret;
 	char command[128];
-	extern char sname[64];
+	extern char sname[SNAMELEN + 1];
 
 	init_logging();
 	free(output_path);
