@@ -141,6 +141,7 @@ enum table {
 #define CLIENT_PID_FILENAME "dbt2_client.pid"
 #define DRIVER_PID_FILENAME "dbt2_driver.pid"
 
+#define SNAMELEN 128
 
 struct table_cardinality_t {
 	int warehouses;
