@@ -1,3 +1,8 @@
+vX.Y.Z
+
+- Increase the buffer size of sname to accommodate hostnames longer than 64
+  characters
+
 v0.48.4
 
 - Fix some scripting bugs in collecting PostgreSQL database stats
